--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -311,10 +311,10 @@ Filter Table Rows:
       <TD><TMPL_VAR NAME=NAME></TD>
       <TD><TMPL_VAR NAME=TYPE></TD>
       <TD><TMPL_VAR NAME=CHR></TD>
-      <TD><TMPL_VAR NAME=START></TD>
-      <TD><TMPL_VAR NAME=STOP></TD>
-      <TD><TMPL_VAR NAME=STRAND></TD>
-      <TD><TMPL_VAR NAME=LENGTH></TD>
+      <TD align=right><TMPL_VAR NAME=START></TD>
+      <TD align=right><TMPL_VAR NAME=STOP></TD>
+      <TD align=center><TMPL_VAR NAME=STRAND></TD>
+      <TD align=right><TMPL_VAR NAME=LENGTH></TD>
       <TD id="gc_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#gc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#at_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['gc_<TMPL_VAR NAME=COUNT>', 'at_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=GC></TD>
       <TD id="at_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#gc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#at_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['gc_<TMPL_VAR NAME=COUNT>', 'at_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=AT></TD>
       <TD id="wgc_<TMPL_VAR NAME=COUNT>" class="link" onclick="$('#wgc_<TMPL_VAR NAME=COUNT>').removeClass('link'); $('#wat_<TMPL_VAR NAME=COUNT>').removeClass('link'); get_wobble_gc(['args__fid','args__<TMPL_VAR NAME=FEATID>'],['wgc_<TMPL_VAR NAME=COUNT>', 'wat_<TMPL_VAR NAME=COUNT>'])"><TMPL_VAR NAME=WGC></TD>
