updated how apply_all is used to set all distances

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -219,13 +219,12 @@ function populate_page_obj(basefile)
  }
 
 function autodistance_setup(){
-
-$(".location").keyup(function(){
-     if($('#apply_all')[0].checked){
+ $("#apply_all").keyup(function(){
         var self = this;
         $('.location').filter('input[id^=dr]').val(self.value)
-     }
 });
+  if ($("#apply_all").val()) {$('#apply_all').keyup();}
+
 }
 
 function autosearch_coge_names (seqs){
@@ -768,7 +767,8 @@ function update_line_width(val)
        <span class='ui-button ui-state-default ui-corner-all ui-button-icon-right' onclick="walk(-1)"><span class="ui-icon ui-icon-arrowthick-1-e"></span>Walk all sequences right</span>
 
      <div class=small>
-     Apply distance to all CoGe submissions?<input type="checkbox" name="apply_all" id="apply_all" value="0" />
+<!--     Apply distance to all CoGe submissions?<input type="checkbox" name="apply_all" id="apply_all" value="0" />-->
+     Apply distance to all CoGe submissions?<input type="textbox" size=8 name="apply_all" id="apply_all" value="<TMPL_VAR NAME="APPLY_ALL">" />
      &nbsp&nbsp&nbsp&nbsp
      Pad CoGe Sequences with additional sequence: <input type="textbox" name="pad_gs" id="pad_gs" value="<TMPL_VAR NAME="PAD_GS">" size =8/>
 
