fixed bug in setting colormatches in HSPs

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -1150,8 +1150,8 @@ function update_line_width(val)
  <TR>
   <td>Color features overlapped by HSPs?
  <td>
- <label class=small><input class="backbox" type="radio" name="color_overlapped_features" id="color_overlapped_features" tabindex="1" value="1" <TMPL_VAR NAME="COLOR_HSP_YES">/>Yes</label>
- <label class=small><input class="backbox" type="radio" name="color_overlapped_features" id="color_overlapped_features" tabindex="1" value="0" <TMPL_VAR NAME="COLOR_HSP_NO"> />No</label>
+ <label class=small><input class="backbox" type="radio" name="color_overlapped_features" id="color_overlapped_features" tabindex="1" value="1" <TMPL_VAR NAME="COLOR_FEAT_YES">/>Yes</label>
+ <label class=small><input class="backbox" type="radio" name="color_overlapped_features" id="color_overlapped_features" tabindex="1" value="0" <TMPL_VAR NAME="COLOR_FEAT_NO"> />No</label>
  <TR>
   <Td>
 <font class="small">Color matches in HSPs?</font>
