added more evalue options

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1153,6 +1153,9 @@ $(function() {
 	</TD>
 	<TD>
 	    <select name=e_value id=e_value>
+             <option value = "1e-30"> 1e-30
+             <option value = "1e-20"> 1e-20
+             <option value = "1e-10"> 1e-10
              <option value = ".000001"> 1e-6
 	     <option value = ".00001"> 1e-5
 	     <option value = ".0001"> 0.0001
