--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -1391,6 +1391,9 @@ $(function() {
 	</TD>
 	<TD>
 	    <select name=ncbi_e_value id=ncbi_e_value>
+             <option value = "1e-30"> 1e-30
+             <option value = "1e-20"> 1e-20
+             <option value = "1e-10"> 1e-10
              <option value = ".000001"> 1e-6
 	     <option value = ".00001"> 1e-5
 	     <option value = ".0001" selected> 0.0001
