updated some formating

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -221,7 +221,7 @@ $(function() {
   <tr valign=top>
   <td>
   <span class = "oblique">Genomes: </span><span class=small id=dsg_count><TMPL_VAR NAME="DSG_COUNT"></span> 
-  <DIV style="float: left; vertical-align: top;" id ="dsg_list"><TMPL_VAR NAME="DSG_LIST"></DIV>
+  <DIV style="vertical-align: top;" id ="dsg_list"><TMPL_VAR NAME="DSG_LIST"></DIV>
   <TD valign=top>
    <DIV class = "oblique">Genome information</DIV>
    <DIV id="dsg_info" class = "small backbox"><TMPL_VAR NAME="DSG_INFO"></DIV>
@@ -229,14 +229,14 @@ $(function() {
   <tr  valign=top>
   <td>
    <span class = "oblique">Datasets: </span><span class=small id=ds_count><TMPL_VAR NAME="DS_COUNT"></span> 
-   <DIV style="float: left; vertical-align: top;" id="ds_list"><TMPL_VAR NAME="DS_LIST"></DIV>
+   <DIV style="vertical-align: top;" id="ds_list"><TMPL_VAR NAME="DS_LIST"></DIV>
   <TD valign=top>
    <DIV class = "oblique">Dataset information</DIV>
    <DIV id="ds_info" class = "small backbox" ><TMPL_VAR NAME="DS_INFO"></DIV>
   <tr  valign=top>
   <td>
    <span class = "oblique">Chromosomes: </span><span class=small id=chr_count><TMPL_VAR NAME="CHR_COUNT"></span> 
-   <DIV style="float: left; vertical-align: top;" id="chr_list"><TMPL_VAR NAME="CHR_LIST"></DIV>
+   <DIV style="vertical-align: top;" id="chr_list"><TMPL_VAR NAME="CHR_LIST"></DIV>
   <TD valign=top>
    <DIV class = "oblique">Chromosome information</DIV>
    <DIV id="chr_info" class = "small backbox" ><TMPL_VAR NAME="CHR_INFO"></DIV>
