--- a/web/tmpl/UserPage.tmpl
+++ b/web/tmpl/UserPage.tmpl
@@ -347,10 +347,10 @@ function filter_rows (search_text){
     </ul>
   </li>
 -->
-  <li><a href="javascript:void(0)">Work Flows</a>
+  <li><a href="javascript:void(0)">My Notebooks</a>
   <ul>
-	<li><a href="javascript:void(0)" onClick="get_workflow_header()">View Workflows</a></li>
-	<li><a href="javascript:void(0)" onClick="create_new_workflow()">Create a Workflow</a></li>
+	<li><a href="javascript:void(0)" onClick="get_workflow_header()">View Notebooks</a></li>
+	<li><a href="javascript:void(0)" onClick="create_new_workflow()">Create New Notebook</a></li>
   </ul>
   </li>
   <li><a href="javascript:void(0)" onClick="init_works()">Work History</a></li>
@@ -475,25 +475,25 @@ or use custom filter:
 	<td>Notes: </td>
 	<td><p><TMPL_VAR NAME=WORK_NOTE></p></tr>
      <tr>
-	<td>Workflows: </td>
+	<td>Notebooks: </td>
 	<td><TMPL_VAR NAME=WORKFLOW_LIST></tr>
      <tr>
 	<td>Date Created: </td>
 	<td><TMPL_VAR NAME=WORK_DATE></tr>
      </table>
      <table>
-     <tr><td><button class='ui-button ui-state-default ui-corner-all' onClick="$('#workflow_choice').slideToggle()">Add to Workflow</button></td><td><button class='ui-button ui-state-default ui-corner-all' onClick="edit_work_entry(<TMPL_VAR NAME=WORK_ID>);$('#work_dialog').dialog('close');">Edit</button></td><td><button class='ui-button ui-state-default ui-corner-all' onClick="delete_work_entry(<TMPL_VAR NAME=WORK_ID>);$('#work_dialog').dialog('close');">Delete</button></td>
+     <tr><td><button class='ui-button ui-state-default ui-corner-all' onClick="$('#workflow_choice').slideToggle()">Add to Notebook</button></td><td><button class='ui-button ui-state-default ui-corner-all' onClick="edit_work_entry(<TMPL_VAR NAME=WORK_ID>);$('#work_dialog').dialog('close');">Edit</button></td><td><button class='ui-button ui-state-default ui-corner-all' onClick="delete_work_entry(<TMPL_VAR NAME=WORK_ID>);$('#work_dialog').dialog('close');">Delete</button></td>
      </table>
 <div id='workflow_choice' style='display:none'>
 <TMPL_IF WF_EXIST>
-Please select a workflow to view: <select id=workflow_select>
+Please select a notebook to view: <select id=workflow_select>
 <TMPL_LOOP NAME=WF_SELECT_LOOP>
 <option value='<TMPL_VAR NAME=WF_ID>'><TMPL_VAR NAME=WF_NAME></option>
 </TMPL_LOOP>
 </select>
 <button class='ui-button ui-state-default ui-corner-all' id=choose_workflow_button onClick=add_work_entry(<TMPL_VAR NAME=WORK_ID>)>Add</button>
 <TMPL_ELSE>
-<div class='ui-state-highlight ui-corner-all'>You have no workflows. Please <a href='javascript:void(0)' onClick=create_workflow([],['content'])>create</a> one </div>
+<div class='ui-state-highlight ui-corner-all'>You have no notebooks. Please <a href="javascript:void(0)" onClick="create_new_workflow()">create</a> one </div>
 </TMPL_IF>
 </div>
 <div id='save_message' style='display:block'></div>
@@ -537,7 +537,7 @@ Please select a workflow to view: <select id=workflow_select>
 <table id="wf_table">
 <thead>
 <tr>
-<th>My Workflows</th>
+<th>My Notebooks</th>
 </tr>
 </thead>
 <tbody>
@@ -546,7 +546,7 @@ Please select a workflow to view: <select id=workflow_select>
 </table>
 </div>
 <div id='workflow_data' style="float:left">
-Please select a workflow to view: <select id=workflow_select onChange=display_workflow(this.value)>
+Please select a notebook to view: <select id=workflow_select onChange=display_workflow(this.value)>
 <TMPL_LOOP NAME=WF_SELECT_LOOP>
 <option value='<TMPL_VAR NAME=WF_ID>'><TMPL_VAR NAME=WF_NAME></option>
 </TMPL_LOOP>
@@ -556,14 +556,15 @@ Please select a workflow to view: <select id=workflow_select onChange=display_wo
 <div id=view_workflow><TMPL_VAR NAME=PRELOAD_WORKFLOW></div>
 </div>
 <TMPL_ELSE>
-<div class='ui-state-highlight ui-corner-all'>You have no workflows. Please <a href='javascript:void(0)' onClick=create_workflow([],['content'])>create</a> one </div>
+<div class='ui-state-highlight ui-corner-all'>You have no notebooks. Please <a href="javascript:void(0)" onClick="create_new_workflow()">create</a> one </div>
 </TMPL_IF>
 </TMPL_IF>
 
 <!-- Workflow Content Template -->
 <TMPL_IF NAME=WF_CONTENT>
-<h2>Workflow <TMPL_VAR NAME=WF_NAME></h2>
-<p><TMPL_VAR NAME=WF_DESC></p>
+<!--<h2>Notebook <TMPL_VAR NAME=WF_NAME></h2>-->
+<h3 class="profile-title">Notebook <TMPL_VAR NAME=WF_NAME></h3>
+<p style="color:006400"><TMPL_VAR NAME=WF_DESC></p>
 <p>Created on <TMPL_VAR NAME=WF_DATE></p>
 <div class='small'>
 <table><tr>
@@ -604,22 +605,22 @@ Please select a workflow to view: <select id=workflow_select onChange=display_wo
 </TMPL_LOOP>
 </div>
 <TMPL_ELSE>
-Workflow <TMPL_VAR NAME=WF_NAME> contains no works. Click here to add works to this workflow.
+Notebook <TMPL_VAR NAME=WF_NAME> contains no works. Click here to add works to this notebook.
 </TMPL_IF>
 <div id='workflow_editor' style='display:none'>
-<p>Please edit the details of your workflow</p>
+<p>Please edit the details of your Notebook</p>
 <table>
 <tr>
-<td>Workflow Name:</td>
+<td>Notebook Name:</td>
 <td><input type=text value='<TMPL_VAR NAME=WF_NAME>' /></td>
 </tr>
 <tr>
-<td>Workflow Description:</td>
+<td>Notebook Description:</td>
 <td><input type=text value='<TMPL_VAR NAME=WF_DESC>' /> </td>
 </table>
 </div>
 <div id=delete_check style='display:none'>
-<p>Are you sure you want to delete this workflow?</br>
+<p>Are you sure you want to delete this notebook?</br>
 <strong>Warning:</strong> this process is irreversible.</p>
 <!--
 <button class='ui-button ui-state-default ui-corner-all' style='float:right' onClick=$(this).dialog('close')>Cancel</button>
@@ -634,10 +635,10 @@ Workflow <TMPL_VAR NAME=WF_NAME> contains no works. Click here to add works to t
 <TMPL_IF NAME=MESSAGE>
 <TMPL_IF NAME=SUCCESS>
 <div class='ui-state-highlight ui-corner-all' style='height:3em'>
-<p style='vertical-align:middle'>Workflow <TMPL_VAR NAME=WF_NAME> successfully created! View it <a href='javascript:void(0)' onClick="get_workflow_header(<TMPL_VAR NAME=WF_ID>)">here</a></p>
+<p style='vertical-align:middle'>Notebook <TMPL_VAR NAME=WF_NAME> successfully created! View it <a href='javascript:void(0)' onClick="get_workflow_header(<TMPL_VAR NAME=WF_ID>)">here</a></p>
 </div>
 <TMPL_ELSE>
-<div class='ui-state-error ui-corner-all'> Error in Workflow Creation. Please remember to fill in the following details:
+<div class='ui-state-error ui-corner-all'> Error in Notebook Creation. Please remember to fill in the following details:
 <ul>
 <TMPL_VAR NAME=WF_NAME>
 <TMPL_VAR NAME=WF_DESC>
@@ -647,14 +648,14 @@ Workflow <TMPL_VAR NAME=WF_NAME> contains no works. Click here to add works to t
 </TMPL_IF>
 </TMPL_IF>
 <TMPL_IF NAME=WF_FORM>
-Please fill out the following details for your new workflow:<br/>
+Please fill out the following details for your new notebook:<br/>
 <table>
 <tr>
-<td>Workflow Name: </td>
+<td>Notebook Name: </td>
 <td><input type=text id=workflow_name></td>
 </tr>
 <tr>
-<td>Workflow Description: </td>
+<td>Notebook Description: </td>
 <td><input type=text id=workflow_desc></td>
 </tr>
 </table>
