--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -1,6 +1,17 @@
 <TMPL_IF NAME=MAIN>
+<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.tablesorter.2.0.3.js"></SCRIPT>
 
 <script language="javascript">
+
+function init_table() {
+ $("#prev_table").tablesorter({		
+		sortClassAsc: 'headerSortUp',		// Class name for ascending sorting action to header
+		sortClassDesc: 'headerSortDown',	// Class name for descending sorting action to header
+		headerClass: 'header',			// Class name for headers (th's)
+		widgets: ['zebra'],
+		textExtraction: 'complex',
+		});
+};
 
 $(function() {$("#pair_info").draggable();});
 $(function() {$("#tabs").tabs({selected:0});});	     
@@ -53,7 +64,12 @@ $(function() {$("#synmap_zoom_box").draggable();});
 }
 
 function check_previous_analyses(){
-get_previous_analyses(['args__oid1','org_id1', 'args__oid2','org_id2'],['previous_analyses']);
+ get_previous_analyses(['args__oid1','org_id1', 'args__oid2','org_id2'],[load_previous_analyses]);
+}
+
+function load_previous_analyses (stuff) {
+ $('#previous_analyses').html(stuff);
+ init_table();
 }
 
 function update_params(val) {
