--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -487,9 +487,10 @@ function open_window (url, loc, width, height)
 </TABLE>
 </div> <!-- close tab-3 -->
 </div> <!--close tabs div-->
-Previously run parameters:
+Previously run parameters: 
 <span id="hide_previous" class='show_prev_button ui-button ui-state-default ui-corner-all' onClick="$('#previous_analyses').toggle(); $('.show_prev_button').toggle();">Hide</span>
 <span id="show_previous" style="display:none" class='show_prev_button ui-button ui-state-default ui-corner-all' onClick="$('#previous_analyses').toggle(); $('.show_prev_button').toggle();">Show</span>
+<div class=small>(Clicking on row automatically selects and sets SynMap genomes and parameters.)</div>
 <div id=previous_analyses></div>
 
 </TMPL_IF>
