updated contact e-mail

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -386,7 +386,7 @@ function open_window (url, loc, width, height)
 <table><tr><td>
 <DIV id=log_text class="small dna" style="display:none"></DIV>
 <DIV id=results><TMPL_IF NAME=RESULTS><TMPL_VAR NAME=RESULTS><TMPL_ELSE>
-<p><span class="alert">WARNING:</span> SynMap is still in beta and may not return results.  Please contact <a href="mailto:elyons@nature.berkeley.edu">Eric Lyons</a> if you feel your analysis has a problem and would like some help.  If available, please send him a copy of the log file<br>
+<p><span class="alert">WARNING:</span> SynMap is still in beta and may not return results.  Please contact <a href="mailto:elyons@berkeley.edu">Eric Lyons</a> if you feel your analysis has a problem and would like some help.  If available, please send him a copy of the log file<br>
 <span class="alert">Please Note:</span>  SynMap is a very computationally intense, multi-step program which may take hours to complete for large genomes.<br>
 <span class=species>SynMap will run faster if it has been previously run as it won't regenerate any previously made data-sets.</span></p>
 <a href="SynMap.pl?dsgid1=3068;dsgid2=8;D=20;g=10;A=5;w=0;b=1;ft1=1;ft2=1;dt=geneorder;ks=1;autogo=1">Click here for an example analysis between <i>Arabidopsis thaliana</i> and <i>Arabidopsis lyrata</i>.</a><br><span class=small>(Note that syntenic gene pairs are colored by synonymous mutations (kS))</span>
